--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 	<ul>
-		<>Vagrant</>
-		<>Docker</>
-		<>Ansible</>
-		<>Integração Contínua</>
+		<li>Vagrant</li>
+		<li>Docker</li>
+		<li>Ansible</li>
+		<li>Integração Contínua</li>
 		</ul>
 		</body>
 		</html>
